--- a/lib/src/components/conjugation-view/conjugation-view.css
+++ b/lib/src/components/conjugation-view/conjugation-view.css
@@ -17,8 +17,14 @@
     margin: 0 auto;
     padding: 0;
     display: flex;
-    justify-content: center;
-    overflow: hidden;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: rgba(255,255,255,0);
+}
+
+.tabs::-webkit-scrollbar {
+    display: none;
 }
 
 .tabs li{
