--- a/lib/src/components/conjugation-view/conjugation-view.css
+++ b/lib/src/components/conjugation-view/conjugation-view.css
@@ -23,6 +23,12 @@
     -webkit-tap-highlight-color: rgba(255,255,255,0);
 }
 
+@media (min-width: 600px) {
+    .tabs{
+        justify-content: center;
+    }
+}
+
 .tabs::-webkit-scrollbar {
     display: none;
 }
