--- a/lib/src/components/conjugation-view/conjugation-view.html
+++ b/lib/src/components/conjugation-view/conjugation-view.html
@@ -1,3 +1,4 @@
+<media-query query="(max-width: 600px)" [(matches)]="isSmallScreen"></media-query>
 <div>
     <div class="content-header">
         <h1>To {{infinitive}}</h1>
@@ -8,7 +9,7 @@
         </ul>
     </div>
     <section class="container">
-        <table *ngIf="isSmallScreen">
+        <table *ngIf="!isSmallScreen">
             <thead>
                 <tr>
                     <th>Present</th>
@@ -25,7 +26,7 @@
                 </tr>
             </tbody>
         </table>
-        <table *ngIf="!isSmallScreen">
+        <table *ngIf="isSmallScreen">
             <thead>
                 <tr>
                     <th width="50%">Present</th>
@@ -39,7 +40,7 @@
             </tr>
             </tbody>
         </table>
-        <table *ngIf="!isSmallScreen" style="margin-top: 15px;">
+        <table *ngIf="isSmallScreen" style="margin-top: 15px;">
             <thead>
             <tr>
                 <th width="50%">Future</th>
