--- a/lib/src/components/conjugation-view/conjugation-view.css
+++ b/lib/src/components/conjugation-view/conjugation-view.css
@@ -5,16 +5,17 @@
 .content-header h1 {
     text-align: center;
     margin: 0;
-    padding: 15px 0 10px;
+    padding: 15px 0;
     font-weight: 500;
     color: #FFF;
-    font-size: 36px;
+    font-size: 34px;
 }
 .container {
     padding: 20px 15px;
 }
 .tabs{
     margin: 0 auto;
+    margin-left: 15px;
     padding: 0;
     display: flex;
     overflow-y: hidden;
@@ -26,6 +27,7 @@
 @media (min-width: 600px) {
     .tabs{
         justify-content: center;
+        margin-left: 0px;
     }
 }
 
@@ -35,14 +37,15 @@
 
 .tabs li{
     display: inline-table;
-    padding: 12px 30px;
+    padding: 14px 24px;
     font-weight: 500;
     text-transform: uppercase;
-    font-size: 13px;
+    font-size: 14px;
     cursor: pointer;
-    color: #FFF;
+    color: rgba(255,255,255,.6);
 }
 
 .tabs li.active{
     border-bottom: 3px solid #FF4081;
+    color: rgb(255,255,255);
 }
