temporary fix: not working on safari

--- a/lib/src/components/conjugation-view/conjugation-view.css
+++ b/lib/src/components/conjugation-view/conjugation-view.css
@@ -31,6 +31,22 @@
     }
 }
 
+.large-table {
+    display: block;
+}
+.small-table{
+    display: none;
+}
+
+@media (max-width: 600px)  {
+    .large-table {
+        display: none;
+    }
+    .small-table{
+        display: block;
+    }
+}
+
 .tabs::-webkit-scrollbar {
     display: none;
 }
